fix credit align

--- a/index.css
+++ b/index.css
@@ -293,6 +293,7 @@ footer {
   color: #aaa;
   margin-left: 20px;
   white-space: nowrap;
+  text-align: right;
 }
 
 /* FULL MOBILE RESPONSIVE BREAKPOINT */
